<resources>
    <string name="app_name">Agora Vote</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Agora Vote</string>
    <string name="nav_header_subtitle">agora-vote@aossie.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log out</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam …...</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="communicate">Communicate</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="contributors">Contributors</string>
    <string name="share">Share</string>
    <string name="vote_activity">Vote Activity</string>
    <string name="developed_with_by_aossie">Developed with ❤️ by AOSSIE</string>
    <string name="agora_vote">Agora Vote</string>
    <string name="continue_with_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome_to_agora_vote">WELCOME TO AGORA VOTE</string>
    <string name="cast_your_vote">Cast Your Vote</string>
    <string name="description">Description</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="your_ballot">Your ballot</string>
    <string name="press_and_hold_to_move_candidates_up_or_down_to_change_preference">press and hold to move Candidates up or down to change preference</string>
    <string name="candidates">Candidates</string>
    <string name="press_the_plus_button_to_add_candidate_to_your_ballot">Press the plus button to add candidate to your ballot</string>
    <string name="cancel">Cancel</string>
    <string name="vote">Vote</string>
    <string name="create_election">Create Election</string>
    <string name="total_elections">Total Elections</string>
    <string name="total_pending_elections">Total Pending Elections</string>
    <string name="total_active_elections">Total Active Elections</string>
    <string name="total_finished_elections">Total Finished Elections</string>
    <string name="user_name">User Name</string>
</resources>
